# claude-reinforcement

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/plans/: 2025-12-22-claude-memory-design.md
docs/research/: reference-repositories.md
src/: __init__.py  cli.py  config.py
src/analysis/: __init__.py  classifier.py  conversation_summarizer.py  corrections.py  ingest.py  llm_extractor.py  pipeline.py  preferences.py  rule_refiner.py
src/db/: __init__.py  database.py
src/generators/: __init__.py  claude_md.py  obsidian.py  review_processor.py  skills.py
src/mcp/: __init__.py
